@@ -2,7 +2,17 @@
 <template id="tplReplyFullScreenPopup">
     <div class="QForum-Content reply-fullscreen-popup">
         <div class="header">
-            回覆
+            <div class="left">
+                <svg class="header-icon">
+                    <use xlink:href="#icon-nav_back_white"></use>
+                </svg>
+            </div>
+            <div class="center">
+                回覆
+            </div>
+            <div id="replySubmit" class="right none-work">
+                送出
+            </div>
         </div>
         <div class="main">
             <div id="editor">
