@@ -24,7 +24,7 @@ CKEDITOR.editorConfig = function( config ) {
 		{ name: 'forms' },
 		{ name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ] },
 		{ name: 'paragraph',   groups: [ 'list', 'indent', 'blocks', 'align', 'bidi' ] },
-		{ name: 'links' },
+		//{ name: 'links' },
 		{ name: 'styles' },
 		{ name: 'colors' },
 		{ name: 'tools' },
